executable(
  'xfwm4',
  [
    'client.c',
    'compositor.c',
    'cycle.c',
    'device.c',
    'display.c',
    'event_filter.c',
    'events.c',
    'focus.c',
    'frame.c',
    'hints.c',
    'icons.c',
    'keyboard.c',
    'main.c',
    'menu.c',
    'misc.c',
    'moveresize.c',
    'mypixmap.c',
    'mywindow.c',
    'netwm.c',
    'parserc.c',
    'placement.c',
    'poswin.c',
    'screen.c',
    'session.c',
    'settings.c',
    'spinning_cursor.c',
    'stacking.c',
    'startup_notification.c',
    'tabwin.c',
    'terminate.c',
    'transients.c',
    'ui_style.c',
    'wireframe.c',
    'workspaces.c',
    'xsync.c',
  ],
  include_directories: [
    include_directories('..'),
  ],
  c_args: [
    '-DG_LOG_DOMAIN="@0@"'.format(meson.project_name()),
  ],
  dependencies: [
    glib,
    gtk,
    xcomposite,
    xfixes,
    xdamage,
    libepoxy,
    startup_notification,
    libx11,
    libxfce4kbd_private,
    libxfce4ui,
    libxfce4util,
    xfconf,
    presentproto,
    xpresent,
    xi,
    xrandr,
    xrender,
    xinerama,
    xres,
    xext,
    libm,
  ],
  link_with: [
    libxfwm_common,
  ],
  install: true,
)
