xfwm4_sources = [
  'client.c',
  'client.h',
  'compositor.c',
  'compositor.h',
  'cycle.c',
  'cycle.h',
  'device.c',
  'device.h',
  'display.c',
  'display.h',
  'event_filter.c',
  'event_filter.h',
  'events.c',
  'events.h',
  'focus.c',
  'focus.h',
  'frame.c',
  'frame.h',
  'hints.c',
  'hints.h',
  'icons.c',
  'icons.h',
  'keyboard.c',
  'keyboard.h',
  'main.c',
  'menu.c',
  'menu.h',
  'misc.c',
  'misc.h',
  'moveresize.c',
  'moveresize.h',
  'mypixmap.c',
  'mypixmap.h',
  'mywindow.c',
  'mywindow.h',
  'netwm.c',
  'netwm.h',
  'parserc.c',
  'parserc.h',
  'placement.c',
  'placement.h',
  'poswin.c',
  'poswin.h',
  'screen.c',
  'screen.h',
  'session.c',
  'session.h',
  'settings.c',
  'settings.h',
  'spinning_cursor.c',
  'spinning_cursor.h',
  'stacking.c',
  'stacking.h',
  'startup_notification.c',
  'startup_notification.h',
  'tabwin.c',
  'tabwin.h',
  'terminate.c',
  'terminate.h',
  'transients.c',
  'transients.h',
  'ui_style.c',
  'ui_style.h',
  'wireframe.c',
  'wireframe.h',
  'workspaces.c',
  'workspaces.h',
  'xpm-color-table.h',
  'xsync.c',
  'xsync.h',
]

executable(
  'xfwm4',
  xfwm4_sources,
  sources: xfce_revision_h,
  c_args: [
    '-DG_LOG_DOMAIN="@0@"'.format('xfwm4'),
    '-DHELPERDIR="@0@"'.format(helper_path_prefix),
  ],
  include_directories: [
    include_directories('..'),
  ],
  dependencies: [
    glib,
    gtk,
    libxfce4ui,
    libxfce4kbd,
    libxfce4util,
    xfconf,
    libx11,
    xinerama,
    libxi,
    libxres,
    libxext,
    libepoxy,
    libstartup,
    libxrender,
    libxrandr,
    xpresent_deps,
    compositor_deps,
    libm,
  ],
  link_with: [
    libxfwm_common,
  ],
  install: true,
  install_dir: get_option('prefix') / get_option('bindir'),
)
