# themes/Makefile.am
#

SUBDIRS =								\
	bbs 							        \
	curve 							        \
	default 							\
	default.keys 							\
	default-4.0 							\
	exocet 							        \
	meenee 							        \
	microcurve 							\
	microdeck 							\
	microdeck2 							\
	microdeck3 							\
	tgc								\
	tgc-large
