# themes/Makefile.am
#

SUBDIRS =								\
	daloa								\
	default								\
	default.keys							\
	default-4.0							\
	default-4.2							\
	default-4.4							\
	katiola								\
	kokodi								\
	largeprint							\
	moheli								\
	sassandra							\
	stoneage							\
	therapy								\
	tyrex								\
	wallis

