install_data(
  [
    'org.xfce.xfwm4-tweaks.svg',
    'org.xfce.workspaces.svg',
    'org.xfce.xfwm4.svg',
    'xfwm4-default.svg',
  ],
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

install_data(
  [
    'xfce-wm-close.svg',
    'xfce-wm-maximize.svg',
    'xfce-wm-menu.svg',
    'xfce-wm-minimize.svg',
    'xfce-wm-shade.svg',
    'xfce-wm-stick.svg',
    'xfce-wm-unmaximize.svg',
    'xfce-wm-unshade.svg',
    'xfce-wm-unstick.svg',
  ],
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions',
)
