themedir = $(pkgdatadir)/themes/fbx
theme_DATA = README \
	bottom-active.xpm \
	bottom-inactive.xpm \
	bottom-left-active.xpm \
	bottom-left-inactive.xpm \
	bottom-right-active.xpm \
	bottom-right-inactive.xpm \
	close-active.xpm \
	close-inactive.xpm \
	close-pressed.xpm \
	hide-active.xpm \
	hide-inactive.xpm \
	hide-pressed.xpm \
	left-active.xpm \
	left-inactive.xpm \
	maximize-active.xpm \
	maximize-inactive.xpm \
	maximize-pressed.xpm \
	menu-active.xpm \
	menu-inactive.xpm \
	menu-pressed.xpm \
	right-active.xpm \
	right-inactive.xpm \
	shade-active.xpm \
	shade-inactive.xpm \
	shade-pressed.xpm \
	stick-active.xpm \
	stick-inactive.xpm \
	stick-pressed.xpm \
	themerc \
	title-1-active.xpm \
	title-1-inactive.xpm \
	title-2-active.xpm \
	title-2-inactive.xpm \
	title-3-active.xpm \
	title-3-inactive.xpm \
	title-4-active.xpm \
	title-4-inactive.xpm \
	title-5-active.xpm \
	title-5-inactive.xpm \
	top-left-active.xpm \
	top-left-inactive.xpm \
	top-right-active.xpm \
	top-right-inactive.xpm
EXTRA_DIST = $(theme_DATA)
