install_data(
  [
    'README',
    'themerc',
    'bottom-active.png',
    'bottom-inactive.png',
    'bottom-left-active.png',
    'bottom-left-inactive.png',
    'bottom-right-active.png',
    'bottom-right-inactive.png',
    'close-active.png',
    'close-inactive.png',
    'close-prelight.png',
    'close-pressed.png',
    'hide-active.png',
    'hide-inactive.png',
    'hide-prelight.png',
    'hide-pressed.png',
    'left-active.png',
    'left-inactive.png',
    'maximize-active.png',
    'maximize-inactive.png',
    'maximize-prelight.png',
    'maximize-pressed.png',
    'maximize-toggled-active.png',
    'maximize-toggled-inactive.png',
    'maximize-toggled-prelight.png',
    'maximize-toggled-pressed.png',
    'menu-active.png',
    'menu-inactive.png',
    'menu-prelight.png',
    'menu-pressed.png',
    'right-active.png',
    'right-inactive.png',
    'shade-active.png',
    'shade-inactive.png',
    'shade-prelight.png',
    'shade-pressed.png',
    'shade-toggled-active.png',
    'shade-toggled-inactive.png',
    'shade-toggled-prelight.png',
    'shade-toggled-pressed.png',
    'stick-active.png',
    'stick-inactive.png',
    'stick-prelight.png',
    'stick-pressed.png',
    'stick-toggled-active.png',
    'stick-toggled-inactive.png',
    'stick-toggled-prelight.png',
    'stick-toggled-pressed.png',
    'title-1-active.png',
    'title-1-inactive.png',
    'title-2-active.png',
    'title-2-inactive.png',
    'title-3-active.png',
    'title-3-inactive.png',
    'title-4-active.png',
    'title-4-inactive.png',
    'title-5-active.png',
    'title-5-inactive.png',
    'top-left-active.png',
    'top-left-inactive.png',
    'top-right-active.png',
    'top-right-inactive.png',
    'bottom-active.xpm',
    'bottom-inactive.xpm',
    'bottom-left-active.xpm',
    'bottom-left-inactive.xpm',
    'bottom-right-active.xpm',
    'bottom-right-inactive.xpm',
    'close-active.xpm',
    'close-inactive.xpm',
    'close-prelight.xpm',
    'close-pressed.xpm',
    'hide-active.xpm',
    'hide-inactive.xpm',
    'hide-prelight.xpm',
    'hide-pressed.xpm',
    'left-active.xpm',
    'left-inactive.xpm',
    'maximize-active.xpm',
    'maximize-inactive.xpm',
    'maximize-prelight.xpm',
    'maximize-pressed.xpm',
    'maximize-toggled-active.xpm',
    'maximize-toggled-inactive.xpm',
    'maximize-toggled-prelight.xpm',
    'maximize-toggled-pressed.xpm',
    'menu-active.xpm',
    'menu-inactive.xpm',
    'menu-prelight.xpm',
    'menu-pressed.xpm',
    'right-active.xpm',
    'right-inactive.xpm',
    'shade-active.xpm',
    'shade-inactive.xpm',
    'shade-prelight.xpm',
    'shade-pressed.xpm',
    'shade-toggled-active.xpm',
    'shade-toggled-inactive.xpm',
    'shade-toggled-prelight.xpm',
    'shade-toggled-pressed.xpm',
    'stick-active.xpm',
    'stick-inactive.xpm',
    'stick-prelight.xpm',
    'stick-pressed.xpm',
    'stick-toggled-active.xpm',
    'stick-toggled-inactive.xpm',
    'stick-toggled-prelight.xpm',
    'stick-toggled-pressed.xpm',
    'title-1-active.xpm',
    'title-1-inactive.xpm',
    'title-2-active.xpm',
    'title-2-inactive.xpm',
    'title-3-active.xpm',
    'title-3-inactive.xpm',
    'title-4-active.xpm',
    'title-4-inactive.xpm',
    'title-5-active.xpm',
    'title-5-inactive.xpm',
    'top-left-active.xpm',
    'top-left-inactive.xpm',
    'top-right-active.xpm',
    'top-right-inactive.xpm',
  ],
  install_dir: get_option('datadir') / 'themes' / 'Kokodi' / 'xfwm4',
)
