themedir = $(datadir)/themes/Symphony/xfwm4
theme_DATA = 								\
	README 								\
	themerc 							\
	bottom-active.png						\
	bottom-active.xpm						\
	bottom-inactive.png						\
	bottom-inactive.xpm						\
	bottom-left-active.png						\
	bottom-left-active.xpm						\
	bottom-left-inactive.png					\
	bottom-left-inactive.xpm					\
	bottom-right-active.png						\
	bottom-right-active.xpm						\
	bottom-right-inactive.png					\
	bottom-right-inactive.xpm					\
	close-active.xpm						\
	close-inactive.xpm						\
	close-pressed.xpm						\
	hide-active.xpm							\
	hide-inactive.xpm						\
	hide-pressed.xpm						\
	left-active.png							\
	left-active.xpm							\
	left-inactive.png						\
	left-inactive.xpm						\
	maximize-active.xpm						\
	maximize-inactive.xpm						\
	maximize-pressed.xpm						\
	maximize-toggled-active.xpm					\
	maximize-toggled-inactive.xpm					\
	maximize-toggled-pressed.xpm					\
	menu-active.xpm							\
	menu-inactive.xpm						\
	menu-pressed.xpm						\
	right-active.png						\
	right-active.xpm						\
	right-inactive.png						\
	right-inactive.xpm						\
	shade-active.xpm						\
	shade-inactive.xpm						\
	shade-pressed.xpm						\
	shade-toggled-active.xpm					\
	shade-toggled-inactive.xpm					\
	shade-toggled-pressed.xpm					\
	stick-active.xpm						\
	stick-inactive.xpm						\
	stick-pressed.xpm						\
	stick-toggled-active.xpm					\
	stick-toggled-inactive.xpm					\
	stick-toggled-pressed.xpm					\
	title-1-active.png						\
	title-1-active.xpm						\
	title-1-inactive.png						\
	title-1-inactive.xpm						\
	title-2-active.png						\
	title-2-active.xpm						\
	title-2-inactive.png						\
	title-2-inactive.xpm						\
	title-3-active.png						\
	title-3-active.xpm						\
	title-3-inactive.png						\
	title-3-inactive.xpm						\
	title-4-active.png						\
	title-4-active.xpm						\
	title-4-inactive.png						\
	title-4-inactive.xpm						\
	title-5-active.png						\
	title-5-active.xpm						\
	title-5-inactive.png						\
	title-5-inactive.xpm						\
	top-left-active.png						\
	top-left-active.xpm						\
	top-left-inactive.png						\
	top-left-inactive.xpm						\
	top-right-active.png						\
	top-right-active.xpm						\
	top-right-inactive.png						\
	top-right-inactive.xpm
EXTRA_DIST = $(theme_DATA)
